--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <p id="message"></p>
       </div>
       <div class="main__task">
-        <ul id="task-list"></ul>
+        <div class="main__list" id="task-list"></div>
       </div>
     </main>
     <footer class="footer">
